--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11262,11 +11262,17 @@ textarea.form-control-lg {
   margin-bottom: 40px;
   text-align: center;
 }
+.depositions__title--align {
+  text-align: unset;
+}
 .depositions__subtitle {
   font-size: 20px;
   font-weight: lighter;
   margin-bottom: 80px;
   text-align: center;
+}
+.depositions__subtitle--align {
+  text-align: unset;
 }
 .depositions__image {
   overflow: hidden;
